rnsc/tests/snapshots/rns_warn-package_directive-string_as_name.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public my.package/MyClass
.super java/lang/Object

.class_end
----- INPUT -----
; Tests that a string literal can be used as package name.
; This should produce an error because "my.package" is a string, not an identifier.
; Expected: parser error about unexpected token

.class public MyClass
.super java/lang/Object
.package "my.package"

.class_end
----- STDERR -----
[W-002] Warning: package name 'my.package' contains '.' separator
   ╭─[ test_data/rns_integration/rns_warn/package_directive/string_as_name.rns:7:10 ]
   │
 7 │ .package "my.package"
   │          ──────┬─────  
   │                ╰─────── package 'my.package' uses '.' as separator
   │ 
   │ Help: If you intended Java-style package syntax, use '/' instead: 'my/package'
   │ 
   │ Note: In bytecode, package separators are represented as '/'. The '.' character is used in Java source syntax but will be kept as-is in the bytecode.
───╯
----- JAVAP -----
Classfile <TEMP_DIR>/my.package/MyClass.class
  Last modified <DATE>; size 70 bytes
  SHA-256 checksum 1b5372220a99b15d3259071914d4d4e173dd55e3ccb31273dba6748d6ccc6393
public class my.package.MyClass
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // my.package/MyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // "my.package/MyClass"
  #4 = Utf8               my.package/MyClass
{
}
