rnsc/tests/snapshots/rns_warn-package_directive-type_hint_as_name.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public @string/MyClass
.super java/lang/Object

.class_end
----- INPUT -----
; Tests that a type hint can be used as package name.
; This should produce an error because @string is a type hint, not an identifier.
; Expected: parser error about unexpected token

.class public MyClass
.super java/lang/Object
.package @string

.class_end
----- STDERR -----
[TODO] Warning: TODO: reserved-like identifier used as name
----- JAVAP -----
Classfile <TEMP_DIR>/@string/MyClass.class
  Last modified <DATE>; size 67 bytes
  SHA-256 checksum bac298ebd6bc89aef41d780b9b8645db98e19e48b05917d36a694b0fa254fe39
public class @string.MyClass
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // @string/MyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // "@string/MyClass"
  #4 = Utf8               @string/MyClass
{
}
